# zelezarnademo

./: Application.cpp  Application.h  CMakeLists.txt  Daq.cpp  Daq.h  KpiCalc.cpp  KpiCalc.h  Log.cpp  Log.h  Object.h  README.md  TimeReference.cpp  TimeReference.h  common.h  main.cpp
data/: KpiData.txt
database/: create_schema.sql  drop_schema.sql
html/: index.html
html/assets/js/: main.js
webserver/: HttpHandleRequest.cpp  HttpHandleRequest.h  HttpSession.h  Webserver.cpp  Webserver.h  Webserver_common.h  WebsocketDataBus.cpp  WebsocketDataBus.h  WebsocketSession.cpp  WebsocketSession.h
